tests/src/frontend/typechecking/exhaustiveness/invalid/child_override_base_class_multi_params_base_positional_non_exh.sk
base class A(Int, String)
class B(b: String, t: Int) extends A

fun myMatch(x: A): String {
  x match {
  | A(1, "a") -> "P"
  | A(2, _) -> "a"
  | B("Hi", 1, _, "b") -> "s"
  | A(42, "c") -> "s"
  }
}
